--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="title"><span>About Me</span></div>
         <div class="about-details">
           <div class="left">
-            <img src="./images/A6.jpg" alt="" />
+            <img src="./Images/A6.jpg" alt="" />
           </div>
           <div class="right">
             <div class="topic">Coding artisan, full-stack enthusiast.</div>
