--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             </div>
            </a>
            <a href="https://thalaforareason.stackblitz.io"> 
-            <div class="topic">Fun Video Projet</div>
+            <div class="topic">Fun Video Project</div>
           </a>
             <p>🚀 Exciting video project featuring a dynamic webpage that counts characters equal to 7 or sums of digits equal to 7! 📹✨ Check it out: Video Project</p>
           </div>
