--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               Hello, I'm a passionate coder and full-stack explorer, proficient in the art of Java. With a keen eye for detail, I specialize in sculpting digital landscapes, seamlessly transforming complexities into intuitive solutions. From navigating intricate backend structures to crafting elegant front-end experiences, my journey in coding is a symphony of innovation and precision. Join me as I compose digital masterpieces that transcend mere functionality, harmonizing every line of code to shape exceptional user-centric experiences.
             </p>
             <div class="button">
-              <a href="https://drive.google.com/file/d/1etc7j1dSWcuBMJHX5Bg3h4xnv6w3a3UB/view?usp=drive_link"><button>Download CV</button></a>
+              <a href="https://drive.google.com/file/d/1f509xROYAARI7yVWKaEwlFvmGrMDAQH7/view?usp=sharing"><button>Download CV</button></a>
             </div>
           </div>
         </div>
@@ -87,13 +87,13 @@
           <div class="text">
             <div class="topic">Skills Reflects My Knowledge</div>
             <p>Versatile in Java development, I bring a strong coding acumen to the table. From backend intricacies to frontend finesse, I navigate the full stack with ease. My skills lie in crafting efficient, user-centric solutions, harmonizing innovation and precision. Ready to contribute to impactful projects with my coding expertise.</p>
-            <!-- <div class="experience">
-              <div class="num">10</div>
+            <div class="experience">
+              <div class="num"><1</div>
               <div class="exp">
                 Years Of <br />
                 Experience
               </div>
-            </div> -->
+            </div>
           </div>
           <div class="boxes">
             <div class="box">
